# cpp_entry

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  clean_for_vsc.bat  main.cpp  run_build_test_codecheck.bat  run_build_test_codecheck.sh
.github/workflows/: ci.yml
.jenkins/: Jenkinsfile.build_test  Jenkinsfile.coverage  cppcheck_suppressions.txt  mingw-w64-toolchain.cmake
inc/: functionality.h  functionalityDispatcher.h  mainEntry.h
inc/algorithms/: algorithmsEntry.h  printDir.h
inc/dummy/: dummy.h  dummyDataProcessor.h  dummyEntry.h  dummyFunc.h  dummy_data_processor.h
inc/rules/: classArrays.h  classInheritance.h  classMoveable.h  lambdas.h  rulesEntry.h  smartPointers.h  templates.h  tupples.h
scripts_builds/: build_code.bat  build_code.sh  build_code_and_tests.bat  build_code_and_tests.sh  build_cross_win.sh  build_run_uts.bat  build_run_uts.sh  clean.bat  clean.sh  code_check.bat  code_check.sh  generate_coverage_msys2.sh  generate_coverage_ubuntu.sh  generate_coverage_win.bat  setup_msvc.bat
src/: functionalityDispatcher.cpp  mainEntry.cpp
src/algorithms/: algorithmsEntry.cpp  printDir.cpp
src/dummy/: dummy.cpp  dummyDataProcessor.cpp  dummyEntry.cpp  dummyFunc.cpp  dummy_data_processor.cpp
src/rules/: classArrays.cpp  classInheritance.cpp  classMoveable.cpp  lambdas.cpp  rulesEntry.cpp  smartPointers.cpp  templates.cpp  tupples.cpp
tests/: functionalityDispatcher_test.cpp  mainEntry_test.cpp  stdafx.h
tests/algorithms/: algorithmsEntry_test.cpp  printDir_test.cpp
tests/common/: common.cpp  common.h  entryTestHelpers.h
tests/dummy/: dummyDataProcessor_test.cpp  dummyEntry_test.cpp  dummy_data_processor_test.cpp  dummy_func_test.cpp  dummy_test.cpp
tests/rules/: classArrays_test.cpp  classInheritance_test.cpp  classMoveable_test.cpp  lambdas_test.cpp  rulesEntry_test.cpp  smartPointers_test.cpp  templates_test.cpp  tupples_test.cpp
